Caret browsing is not available if there is no selection ranges
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Tracking
()
People
(Reporter: dmitry, Unassigned)
References
(Blocks 1 open bug)
Details
(Keywords: access, fixed1.8.1.1, parity-chrome, Whiteboard: [not needed for 1.9] sunport17)
Attachments
(4 files, 3 obsolete files)
1.57 KB,
patch
|
aaronlev
:
review+
bzbarsky
:
superreview+
bzbarsky
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
1.53 KB,
patch
|
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
3.52 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
3.47 KB,
patch
|
uriber
:
review+
peterv
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Comment 1•23 years ago
|
||
![]() |
||
Comment 3•23 years ago
|
||
Comment 4•22 years ago
|
||
Updated•21 years ago
|
Updated•21 years ago
|
Comment 9•21 years ago
|
||
Comment 10•21 years ago
|
||
Comment 11•21 years ago
|
||
Comment 12•21 years ago
|
||
Comment 13•21 years ago
|
||
Comment 14•21 years ago
|
||
Comment 15•21 years ago
|
||
Comment 16•21 years ago
|
||
Comment 17•20 years ago
|
||
![]() |
||
Comment 18•20 years ago
|
||
Comment 19•20 years ago
|
||
![]() |
||
Comment 20•20 years ago
|
||
Comment 21•20 years ago
|
||
![]() |
||
Comment 22•20 years ago
|
||
Comment 23•20 years ago
|
||
![]() |
||
Comment 24•20 years ago
|
||
Comment 25•20 years ago
|
||
Comment 26•20 years ago
|
||
Comment 27•20 years ago
|
||
![]() |
||
Comment 28•20 years ago
|
||
![]() |
||
Updated•20 years ago
|
Comment 29•20 years ago
|
||
Comment 30•19 years ago
|
||
Comment 31•19 years ago
|
||
Comment 32•19 years ago
|
||
Comment 33•19 years ago
|
||
Comment 34•19 years ago
|
||
Comment 35•19 years ago
|
||
Updated•19 years ago
|
Comment 37•19 years ago
|
||
Comment 38•19 years ago
|
||
![]() |
||
Comment 39•19 years ago
|
||
Comment 40•19 years ago
|
||
![]() |
||
Comment 41•19 years ago
|
||
Comment 42•19 years ago
|
||
Comment 43•19 years ago
|
||
![]() |
||
Comment 44•19 years ago
|
||
![]() |
||
Comment 45•18 years ago
|
||
Comment 46•18 years ago
|
||
Updated•18 years ago
|
Comment 47•18 years ago
|
||
![]() |
||
Comment 49•17 years ago
|
||
Comment 50•17 years ago
|
||
Comment 51•17 years ago
|
||
Comment 52•17 years ago
|
||
Comment 53•17 years ago
|
||
Updated•17 years ago
|
Comment 54•17 years ago
|
||
![]() |
||
Comment 55•17 years ago
|
||
Comment 56•17 years ago
|
||
Comment 57•17 years ago
|
||
Comment 58•17 years ago
|
||
Comment 59•17 years ago
|
||
Updated•17 years ago
|
Updated•16 years ago
|
Comment 60•15 years ago
|
||
Comment 61•15 years ago
|
||
![]() |
||
Comment 62•12 years ago
|
||
Assignee | ||
Updated•7 years ago
|
Comment 63•6 years ago
|
||
Comment 64•4 years ago
|
||
The bug assignee didn't login in Bugzilla in the last 7 months.
:hsinyi, could you have a look please?
For more information, please visit auto_nag documentation.
From point of view of DOM Selection, while caret browsing is not enabled, initial selection should be "nothing" (i.e., the rangeCount
should be 0
) for web-compat. And according to the chrome's behavior, it seems that Selection
should be collapsed to first visible text or <img>
etc in the document before handling users' caret/selection navigation if and only if caret browsing mode is enabled and there is no selection range.
This must be really inconvenient bug for caret browsing users, but a Tab
key press makes caret appear. So there is a workaround.
Comment 66•3 years ago
|
||
The severity field for this bug is relatively low, S3. However, the bug has 3 duplicates.
:hsinyi, could you consider increasing the bug severity?
For more information, please visit auto_nag documentation.
Comment 67•3 years ago
|
||
We just reviewed this super old bug a few days ago.
Description
•