Bug 144000 caret browsing - bad initial position r=aaronleventhal sr=bzbarsky